Implement native query using dsl